package gameLaby.laby.modele;

public class Personnage extends Position {
    /**
     * Constructeur avec coordonnees
     *
     * @param dx position selon x
     * @param dy position selon y
     */
    public Personnage(int dx, int dy) {
        super(dx, dy);
    }
}
